<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rounded_corners"
    android:backgroundTint="@color/surface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/fragment_permission_rationale_dialog_002"
            android:textSize="@dimen/text_size_20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_rationale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/fragment_permission_rationale_dialog_003"
            android:textSize="@dimen/text_size_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_title" />

        <View
            android:id="@+id/view_divider_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@color/divider"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/text_view_rationale"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:layout_marginStart="@dimen/margin_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_divider_top" />

        <View
            android:id="@+id/view_divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1dp"
            android:background="@color/divider"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view"
            tools:visibility="visible" />

        <TextView
            style="@style/TextViewStyle.Button"
            android:id="@+id/text_view_deny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/fragment_permission_rationale_dialog_001"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_view_allow"
            app:layout_constraintTop_toBottomOf="@+id/view_divider_bottom" />

        <TextView
            style="@style/TextViewStyle.Button"
            android:id="@+id/text_view_allow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/fragment_permission_rationale_dialog_000"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_deny"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_deny" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>