<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/rounded_corners"
    android:backgroundTint="@color/surface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="sans-serif-light"
            android:textSize="@dimen/text_size_20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="5월 2일" />

        <View
            android:id="@+id/view_color"
            android:layout_width="@dimen/width_8dp"
            android:layout_height="@dimen/height_8dp"
            android:layout_marginBottom="@dimen/margin_1dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:background="@drawable/background_memo_color"
            android:backgroundTint="@color/white"
            android:elevation="@dimen/elevation_4dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_date"
            app:layout_constraintStart_toEndOf="@+id/text_view_date"
            app:layout_constraintTop_toTopOf="@+id/text_view_date" />

        <EditText
            android:id="@+id/edit_text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/memo_editing_dialog_fragment_002"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxHeight="@dimen/height_64dp"
            android:paddingBottom="@dimen/padding_8dp"
            android:paddingEnd="@dimen/padding_12dp"
            android:paddingStart="@dimen/padding_12dp"
            android:paddingTop="@dimen/padding_8dp"
            android:textSize="@dimen/text_size_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_date"/>

        <include
            android:id="@+id/checklist_header"
            layout="@layout/checklist_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_content"
            app:layout_constrainedHeight="true"/>

        <View
            android:id="@+id/view_divider_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:background="@color/divider"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/checklist_header"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_checklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_divider_top"
            app:layout_constrainedHeight="true"
            app:layout_constraintHeight_max="@dimen/height_128dp"
            tools:visibility="visible" />

        <View
            android:id="@+id/view_divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1dp"
            android:background="@color/divider"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_checklist"
            tools:visibility="visible" />

        <com.flow.android.kotlin.lockscreen.color.widget.ColorPickerLayout
            android:id="@+id/color_picker_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_48dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_divider_bottom" />

        <TextView
            style="@style/TextViewStyle.Button"
            android:id="@+id/text_view_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/memo_editing_dialog_fragment_000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_view_save"
            app:layout_constraintTop_toBottomOf="@+id/color_picker_layout"
            tools:text="취소" />

        <TextView
            style="@style/TextViewStyle.Button"
            android:id="@+id/text_view_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/memo_editing_dialog_fragment_001"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_cancel"
            tools:text="저장" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>